fixed the pointer not showing correctly on cancel order button

--- a/style.scss
+++ b/style.scss
@@ -171,4 +171,5 @@ a.PlanChangeLink {
 
 .CancelOrderButton:hover {
     color: hsl(223, 47%, 23%);
+    cursor: pointer;
 }
